Fix up stale Github references

--- a/templates/README.md.j2
+++ b/templates/README.md.j2
@@ -3,7 +3,7 @@
 This is a git repository of the source files for the book {{title}} by {{author}}, adapted from a British Library electronic text. This book is in the Public Domain, see the LICENSE file for details.
 
 #Found an error?
-If you find an error in a book in git-lit, you can report it by clicking the Issues tab in this book’s repository. Please copy-and-paste the entire sentence that contains the error, and what the text should read. For advanced users, you can make a Pull Request on Github.  For more information and how to get involved see the [CONTRIBUTING](http://gitenberg.github.com/#contributing) section of the GITenberg website.
+If you find an error in a book in git-lit, you can report it by clicking the Issues tab in this book’s repository. Please copy-and-paste the entire sentence that contains the error, and what the text should read. For advanced users, you can make a Pull Request on Github.  For more information and how to get involved see the [CONTRIBUTING](http://Git-Lit.github.com/#contributing) section of the Git-Lit website.
 
 #About Git-Lit
-Git-lit is a project to upload and version-control public domain texts from the British Library corpus of scanned digital texts. Read more at [the git-lit project page](https://github.com/JonathanReeve/git-lit).
+Git-lit is a project to upload and version-control public domain texts from the British Library corpus of scanned digital texts. Read more at [the git-lit project page](https://github.com/Git-Lit/git-lit).
