Improve formatting.  Add links to BritLib & FLickr

--- a/templates/README.md.j2
+++ b/templates/README.md.j2
@@ -1,9 +1,12 @@
-#{{book_id}}: {{title}}
+#_{{title}}_ (BL {{book_id}})
+## by {{author}}
 
-This is a git repository of the source files for the book {{title}} by {{author}}, adapted from a British Library electronic text. This book is in the Public Domain, see the LICENSE file for details.
+This is a git repository of the source files for the book _{{title}}_ by {{author}}, adapted from a British Library electronic text. This book is in the Public Domain, see the LICENSE file for details.
+Here is the British Library [catalog record](http://explore.bl.uk/primo_library/libweb/action/search.do?cs=frb&doc=BLL01{{book_id}}&dscnt=1&scp.scps=scope:(BLCONTENT)&frbg=&tab=local_tab&srt=rank&ct=search&mode=Basic&dum=true&tb=t&indx=1&vl(freeText0)={{book_id}}&fn=search&vid=BLVU1).
+There may be illustrations from the volume available on [flickr](https://www.flickr.com/photos/britishlibrary/tags/sysnum{{book_id}}).
 
 #Found an error?
-If you find an error in a book in git-lit, you can report it by clicking the Issues tab in this book’s repository. Please copy-and-paste the entire sentence that contains the error, and what the text should read. For advanced users, you can make a Pull Request on Github.  For more information and how to get involved see the [CONTRIBUTING](http://Git-Lit.github.com/#contributing) section of the Git-Lit website.
+If you find an error in a book in git-lit, you can report it by clicking the Issues tab in this book’s repository. Please copy-and-paste the entire sentence that contains the error, and what the text should read. For advanced users, you can make a Pull Request on Github.  For more information and how to get involved see the [CONTRIBUTING](http://git-lit.github.io/#contributing) section of the Git-Lit website.
 
 #About Git-Lit
 Git-lit is a project to upload and version-control public domain texts from the British Library corpus of scanned digital texts. Read more at [the git-lit project page](https://github.com/Git-Lit/git-lit).
