fixes for multi-volume books

--- a/gitlit/jekyll-skel/_includes/sidebar.html
+++ b/gitlit/jekyll-skel/_includes/sidebar.html
@@ -31,7 +31,7 @@
 
     <a class="sidebar-nav-item" href="https://github.com/git-lit/{{ site.book_id }}/edit/gh-pages/index.md">Edit</a>
 
-    <a class="sidebar-nav-item" href="https://via.hypothes.is/{{ site.url }}{{ site.baseurl }}{{page.url}}/">Annotate</a>
+    <a class="sidebar-nav-item" href="https://via.hypothes.is/{{ site.url }}{{ site.baseurl }}">Annotate</a>
 
   </nav>
 
