--- a/gitlit/templates/about.md.j2
+++ b/gitlit/templates/about.md.j2
@@ -6,8 +6,7 @@ title: About
 # _{{title}}_ (BL {{book_id}})
 ## by {{author}}
 
-This is an electronic edition of the book _{{title}}_ by {{author}}, automatically generated from a British Library scan. Here is the British Library [catalog record](http://explore.bl.uk/primo_library/libweb/action/search.do?cs=frb&doc=BLL01{{book_id}}&dscnt=1&scp.scps=scope:(BLCONTENT)&frbg=&tab=local_tab&srt=rank&ct=search&mode=Basic&dum=true&tb=t&indx=1&vl(freeText0)={{book_id}}&fn=search&vid=BLVU1).
-There may be illustrations from the volume available on [flickr](https://www.flickr.com/photos/britishlibrary/tags/sysnum{{book_id}}).
+This is an electronic edition of the book _{{title}}_ by {{author}}, {%if volume > 0%}volume {{ volume }}, {%endif%}automatically generated from a British Library scan. Here is [the British Library catalog record](http://explore.bl.uk/primo_library/libweb/action/search.do?cs=frb&doc=BLL01{{book_id}}&dscnt=1&scp.scps=scope:(BLCONTENT)&frbg=&tab=local_tab&srt=rank&ct=search&mode=Basic&dum=true&tb=t&indx=1&vl(freeText0)={{book_id}}&fn=search&vid=BLVU1). There may be [illustrations from the volume available on flickr](https://www.flickr.com/photos/britishlibrary/tags/sysnum{{book_id}}).
 
 # Found an error?
 If you find an error in a book in git-lit, you can report it by clicking the Issues tab in this book’s repository. Please copy-and-paste the entire sentence that contains the error, and what the text should read. For advanced users, you can make a Pull Request on Github.  For more information and how to get involved see the [CONTRIBUTING](http://git-lit.github.io/#contributing) section of the Git-Lit website.
