moving volumes into titles

--- a/gitlit/templates/README.md.j2
+++ b/gitlit/templates/README.md.j2
@@ -3,7 +3,7 @@
 
 ### [Read the book here]({{url}}). 
 
-This is a git repository of the source files for the book _{{title}}_, {%if volume > 0%}volume {{ volume }}, {%endif%}by {{author}}, adapted from a British Library electronic text. This book is in the Public Domain, see the LICENSE file for details.  Here is the British Library [catalog record](http://explore.bl.uk/primo_library/libweb/action/search.do?cs=frb&doc=BLL01{{book_id}}&dscnt=1&scp.scps=scope:(BLCONTENT)&frbg=&tab=local_tab&srt=rank&ct=search&mode=Basic&dum=true&tb=t&indx=1&vl(freeText0)={{book_id}}&fn=search&vid=BLVU1).
+This is a git repository of the source files for the book _{{title}}_, by {{author}}, adapted from a British Library electronic text. This book is in the Public Domain, see the LICENSE file for details.  Here is the British Library [catalog record](http://explore.bl.uk/primo_library/libweb/action/search.do?cs=frb&doc=BLL01{{book_id}}&dscnt=1&scp.scps=scope:(BLCONTENT)&frbg=&tab=local_tab&srt=rank&ct=search&mode=Basic&dum=true&tb=t&indx=1&vl(freeText0)={{book_id}}&fn=search&vid=BLVU1).
 There may be [illustrations from the volume available on flickr](https://www.flickr.com/photos/britishlibrary/tags/sysnum{{book_id}}).
 
 #Found an error?
